assets/css/app.css
body {
    margin-top: 60px;
}

.footer {
    padding: 0 15px;
}

.form-signin .form-signin-heading,
.form-signin .checkbox {
    margin-bottom: 10px;
}

.form-signin .checkbox {
    font-weight: normal;
}

.form-signin .form-control {
    position: relative;
    height: auto;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding: 10px;
    font-size: 16px;
}

.form-signin .form-control:focus {
    z-index: 2;
}

.form-signin input[type="email"] {
    margin-bottom: -1px;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.form-signin input[type="password"] {
    margin-bottom: 10px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.voucher-box {
    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
    font-size: 1.4em;
}

.thumbnail img {
    width: 100%;
    max-width: 205px;
    padding: 2em 2em 0 2em;
}

.thumbnail {
    text-align: center;
    hyphens: auto;
}

.breadcrumb {
    margin-bottom: 10px;
}

.alert {
    margin-bottom: 10px;
}

.info {
    margin-top: 20px;
}

